@@ -921,6 +921,207 @@ name|isCandidate
 return|;
 block|}
 block|}
+specifier|public
+specifier|static
+class|class
+name|FieldExprProcessor
+implements|implements
+name|NodeProcessor
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Object
+name|process
+parameter_list|(
+name|Node
+name|nd
+parameter_list|,
+name|Stack
+argument_list|<
+name|Node
+argument_list|>
+name|stack
+parameter_list|,
+name|NodeProcessorCtx
+name|procCtx
+parameter_list|,
+name|Object
+modifier|...
+name|nodeOutputs
+parameter_list|)
+throws|throws
+name|SemanticException
+block|{
+name|ExprWalkerInfo
+name|ctx
+init|=
+operator|(
+name|ExprWalkerInfo
+operator|)
+name|procCtx
+decl_stmt|;
+name|String
+name|alias
+init|=
+literal|null
+decl_stmt|;
+name|exprNodeFieldDesc
+name|expr
+init|=
+operator|(
+name|exprNodeFieldDesc
+operator|)
+name|nd
+decl_stmt|;
+name|boolean
+name|isCandidate
+init|=
+literal|true
+decl_stmt|;
+assert|assert
+operator|(
+name|nd
+operator|.
+name|getChildren
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+operator|)
+assert|;
+name|exprNodeDesc
+name|ch
+init|=
+operator|(
+name|exprNodeDesc
+operator|)
+name|nd
+operator|.
+name|getChildren
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|exprNodeDesc
+name|newCh
+init|=
+name|ctx
+operator|.
+name|getConvertedNode
+argument_list|(
+name|ch
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|newCh
+operator|!=
+literal|null
+condition|)
+block|{
+name|expr
+operator|.
+name|setDesc
+argument_list|(
+name|newCh
+argument_list|)
+expr_stmt|;
+name|ch
+operator|=
+name|newCh
+expr_stmt|;
+block|}
+name|String
+name|chAlias
+init|=
+name|ctx
+operator|.
+name|getAlias
+argument_list|(
+name|ch
+argument_list|)
+decl_stmt|;
+name|isCandidate
+operator|=
+name|isCandidate
+operator|&&
+name|ctx
+operator|.
+name|isCandidate
+argument_list|(
+name|ch
+argument_list|)
+expr_stmt|;
+comment|// need to iterate through all children even if one is found to be not a candidate
+comment|// in case if the other children could be individually pushed up
+if|if
+condition|(
+name|isCandidate
+operator|&&
+name|chAlias
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|alias
+operator|==
+literal|null
+condition|)
+block|{
+name|alias
+operator|=
+name|chAlias
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|chAlias
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|alias
+argument_list|)
+condition|)
+block|{
+name|isCandidate
+operator|=
+literal|false
+expr_stmt|;
+block|}
+block|}
+name|ctx
+operator|.
+name|addAlias
+argument_list|(
+name|expr
+argument_list|,
+name|alias
+argument_list|)
+expr_stmt|;
+name|ctx
+operator|.
+name|setIsCandidate
+argument_list|(
+name|expr
+argument_list|,
+name|isCandidate
+argument_list|)
+expr_stmt|;
+return|return
+name|isCandidate
+return|;
+block|}
+block|}
 comment|/**    * If all children are candidates and refer only to one table alias then this expr is a candidate    * else it is not a candidate but its children could be final candidates    */
 specifier|public
 specifier|static
@@ -1556,6 +1757,18 @@ name|ColumnExprProcessor
 argument_list|()
 return|;
 block|}
+specifier|private
+specifier|static
+name|NodeProcessor
+name|getFieldProcessor
+parameter_list|()
+block|{
+return|return
+operator|new
+name|FieldExprProcessor
+argument_list|()
+return|;
+block|}
 specifier|public
 specifier|static
 name|ExprWalkerInfo
@@ -1713,7 +1926,7 @@ operator|+
 literal|"%"
 argument_list|)
 argument_list|,
-name|getFuncProcessor
+name|getFieldProcessor
 argument_list|()
 argument_list|)
 expr_stmt|;
